// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrignalImage /> renders properly 1`] = `
.c0 {
  background-image: url("/cat-image.jpg");
  background-size: cover;
  background-position: center center;
  height: 100%;
  opacity: 0;
  pointer-events: none;
  position: relative;
  -webkit-transition: opacity 0.6s ease;
  transition: opacity 0.6s ease;
  width: 100%;
}

.c0::before {
  background: linear-gradient(30deg,undefined 0%,undefined 100%);
  content: '';
  box-shadow: inset 0 1px 4px 2px rgba(0,0,0,0.2);
  height: 67px;
  left: 0;
  position: absolute;
  top: 0;
  width: 67px;
}

<OriginalImage
  image="/cat-image.jpg"
>
  <div
    className="c0"
  />
</OriginalImage>
`;

exports[`<OrignalImage /> show: true 1`] = `
.c0 {
  background-image: url("/cat-image.jpg");
  background-size: cover;
  background-position: center center;
  height: 100%;
  opacity: 1;
  pointer-events: auto;
  position: relative;
  -webkit-transition: opacity 0.6s ease;
  transition: opacity 0.6s ease;
  width: 100%;
}

.c0::before {
  background: linear-gradient(30deg,undefined 0%,undefined 100%);
  content: '';
  box-shadow: inset 0 1px 4px 2px rgba(0,0,0,0.2);
  height: 67px;
  left: 0;
  position: absolute;
  top: 0;
  width: 67px;
}

<OriginalImage
  image="/cat-image.jpg"
  show={true}
>
  <div
    className="c0"
  />
</OriginalImage>
`;
